# MLOps4

./: model.ipynb  model.pkl  pyproject.toml
